hphp/test/zend/good/tests-classes/interface_method.php
<?php

interface if_a {
	function err() {};
}

?>