hphp/test/zend/bad/Zend/tests/function_arguments_001.php
<?php
function foo($arg1 string) {}
?>